<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DonorSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorBase">


            <TextView
                android:id="@+id/tv_Head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_Available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:theme="@style/SCBSwitch"/>

                <TextView
                    android:id="@+id/tv_Available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_11sdp"/>

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_box_base"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgQrCode"
                    android:layout_width="150sp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_box_base"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_baseline_qr_code_scanner_24"
                    android:visibility="visible"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:id="@+id/iv_Driver"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_box_base"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_add_blue"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/donorpp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/entrname"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_Mobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginRight="2dp"
                        android:layout_toLeftOf="@+id/v1"
                        android:background="@drawable/et_bg"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:editable="false"
                        android:focusable="false"
                        android:maxLength="13"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/v1"
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true" />

                    <EditText
                        android:id="@+id/et_Email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@id/v1"
                        android:background="@drawable/et_bg"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/et_Address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_bg"
                    android:hint="Enter Address*"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tv_Group"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_bg"
                    android:drawableRight="@drawable/ic_drop"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/selbloodgrp"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/sp_Bloodgrp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/histryimgs" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_One"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_toLeftOf="@+id/iv_Two"
                        android:background="@drawable/bg_box_base"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_add_blue" />

                    <ImageView
                        android:id="@+id/iv_Two"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bg_box_base"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_add_blue" />

                    <ImageView
                        android:id="@+id/iv_Three"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/iv_Two"
                        android:background="@drawable/bg_box_base"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_add_blue" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/et_Villagename"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/villagename"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_Cityname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginRight="2dp"
                        android:layout_toLeftOf="@+id/v3"
                        android:background="@drawable/et_bg"
                        android:hint="@string/cityname"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/v3"
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true" />

                    <EditText
                        android:id="@+id/et_Districtname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@id/v3"
                        android:background="@drawable/et_bg"
                        android:hint="@string/districtname"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_Latitude"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginRight="2dp"
                        android:layout_toLeftOf="@+id/v31"
                        android:background="@drawable/et_bg"
                        android:hint="@string/enter_latitude"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/v31"
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true" />

                    <EditText
                        android:id="@+id/et_Longitude"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@id/v31"
                        android:background="@drawable/et_bg"
                        android:hint="@string/enter_longitude"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>


                <EditText
                    android:id="@+id/et_Username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/et_bg"
                    android:hint="@string/username"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_Password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginRight="2dp"
                        android:layout_toLeftOf="@+id/v4"
                        android:background="@drawable/et_bg"
                        android:hint="@string/enpass"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/v4"
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true" />

                    <EditText
                        android:id="@+id/et_Repassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@id/v4"
                        android:background="@drawable/et_bg"
                        android:hint="@string/repass"
                        android:inputType="textPassword"
                        android:maxLength="14"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/bg_btn"
                    android:text="@string/update"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />


                <TextView
                    android:visibility="invisible"
                    android:id="@+id/tv_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="Already have an account? Login Now."
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_Loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/colorWhite" />

    </RelativeLayout>

</RelativeLayout>