<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@drawable/bg_one"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_Bck"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_bck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="User Profile"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_Camera"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/camera" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.52"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_Fname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.995"
                    android:background="@null"
                    android:hint="@string/fname"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_15sdp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <EditText
                    android:id="@+id/et_Lname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.995"
                    android:background="@null"
                    android:hint="@string/lname"
                    android:inputType="textCapSentences"
                    android:paddingLeft="@dimen/_15sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/colorGrayLight" />

            <EditText
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@null"
                android:hint="@string/enteremail"
                android:focusable="false"
                android:editable="false"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/colorGrayLight" />

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@null"
                android:hint="@string/enterpass"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_15sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/colorGrayLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="+91"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <EditText
                    android:id="@+id/et_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@null"
                    android:hint="@string/phonenum"
                    android:inputType="number"
                    android:paddingLeft="@dimen/_5sdp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.5"
                android:background="@color/colorGrayLight" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_Start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:background="@color/colorBase"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_Loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/colorWhite" />

    </RelativeLayout>

</RelativeLayout>